--- a/11_significance_testing/_slides/index.html
+++ b/11_significance_testing/_slides/index.html
@@ -1306,10 +1306,10 @@ p(\bar{x}_\text{med} \neq \bar{x}_\text{psych}) = 2 \times \text{min}\left(p(\ba
 </div><div class="column" style="width:91%;">
 <div class="summary">
 <ul>
-<li class="fragment"><strong>Signifikanztests</strong> prüfen die Wahrscheinlichkeit, mit der ein experimentelles Ergebnis (oder ein extremeres) auch zufällig zustande gekommen sein kann, obwohl die Nullhypothese gilt.</li>
+<li class="fragment"><strong>Signifikanztests</strong> prüfen die Wahrscheinlichkeit, mit der unser experimenteller Effekt (oder ein noch extremerer Effekt) durch Zufall entstanden sein könnte (d.h. für die Annahme dass die <em>Nullhypothese tatsächlich zutreffend</em> ist).</li>
 <li class="fragment">Signifikanztests nach Fisher basieren auf der <strong>Stichprobenverteilung um den Wert der Nullhypothese</strong>.</li>
-<li class="fragment">Bei Signifikanztests nach <strong>Neyman und Pearson</strong> muss zudem die Stichprobenverteilung um einen vom Forscher festgelegten Wert der Alternativhypothese betrachtet werden.</li>
-<li class="fragment">Signifikanztests treffen Entscheidungen für oder gegen eine Hypothese basierend auf dem berechneten <strong>p-Wert</strong> und dem festgelegten <strong>Signifikanzniveau</strong> <span class="math inline">\(\mathbf{\alpha}\)</span></li>
+<li class="fragment">Signifikanztests treffen Entscheidungen für (Neyman &amp; Pearson) oder gegen (Fisher) eine Hypothese, basierend auf dem berechneten <strong>p-Wert</strong> und dem festgelegten <strong>Signifikanzniveau α</strong>.</li>
+<li class="fragment">Das <strong>Binäres Entscheidungskonzept von Neyman und Pearson</strong> findet häufig bei der <strong>Power-Berechnung</strong> in der Planungsphase einer Studie Anwendung.</li>
 </ul>
 </div>
 </div>
