--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -498,13 +498,13 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <td><strong>Trainex</strong></td>
 <td><img data-src="images/trainex.png"></td>
 <td>Format: pdf</td>
-<td><a href="https://www.trainex25.de/hmu-trainex">https://www.trainex25.de/hmu-trainex</a></td>
+<td><a href="https://www.trainex25.de/hmu-trainex">trainex25.de/hmu-trainex</a></td>
 </tr>
 <tr class="even">
 <td><strong>Onlineversion</strong></td>
 <td><img data-src="images/m-guggenmos_github.png"></td>
 <td>Format: html</td>
-<td><a href="https://m-guggenmos.github.io">https://m-guggenmos.github.io</a></td>
+<td><a href="https://m-guggenmos.github.io">m-guggenmos.github.io</a> oder <a href="https://cutt.ly/risch">cutt.ly/risch</a></td>
 </tr>
 </tbody>
 </table>
