--- a/08_inference/_slides/index.html
+++ b/08_inference/_slides/index.html
@@ -817,12 +817,16 @@ plt.savefig('images/noselength_limit.png', bbox_inches='tight')
 <h2>Theoretische Stichprobenverteilung</h2>
 <div class="columns">
 <div class="column" style="width:69%;">
-<p><strong>Zur Erinnerung:</strong></p>
+<p><strong>Empirische Stichprobenverteilung</strong></p>
 <ul>
-<li class="fragment">Bei der <strong>Metaanalyse</strong> ging es um die Verlässlichkeit der Schätzung von Parametern in Bezug auf die Population</li>
-<li class="fragment">Das gemittelte, gewichtete Ergebnis vieler Studien liefert eine bessere Schätzung, als die Ergebnisse einzelner Studien.</li>
-<li class="fragment">Die Metaanalyse basiert auf der <strong>empirischen Stichprobenverteilung</strong>.</li>
+<li class="fragment">Führe ich dieselbe Studie mehrmals durch und notiere jeweils den statistischen Kennwert, erhalte ich eine <span style=" color: navy !important;"><strong>empirische Stichprobenverteilung</strong></span>.</li>
+<li class="fragment">Dies ist die Idee der <strong>Metaanalyse</strong>, die eine Vielzahl empirischer Studien zusammenfasst und analysiert (⇒ Vorlesung 13).</li>
 </ul>
+<!-- **Zur Erinnerung:**
+
+- Bei der **Metaanalyse** ging es um die Verlässlichkeit der Schätzung von Parametern in Bezug auf die Population
+- Das gemittelte, gewichtete Ergebnis vieler Studien liefert eine bessere Schätzung, als die Ergebnisse einzelner Studien.
+- Die Metaanalyse basiert auf der **empirischen Stichprobenverteilung**. -->
 <p><strong>Die Idee der Inferenzstatistik ist ähnlich:</strong></p>
 <ul>
 <li class="fragment">Ich habe nur <em>eine</em> Studie, aber überlege, was theoretisch passieren würde, wenn ich diese Studie immer wieder wiederholen würde.</li>
@@ -1338,7 +1342,7 @@ se^2 = \frac{\sigma^2}{n} \qquad \text{bzw.} \qquad se = \frac{\sigma}{\sqrt{n}}
 \bar{x}\pm\hat{se} = 6\pm 0{,}5 = [5{,}5; 6{,}5]
 \]</span></p>
 <p>68% der Stichprobenverteilung umfasst.</p>
-<p><span style="font-size: 18px">In Vorlesung 13 werden wir noch feststellen, dass wir (leider) <u>nicht</u> schlussfolgern können, dass der wahre Populationsmittelwert <span class="math inline">\(\mu\)</span> mit 68% Wahrscheinlichkeit in diesem Intervall liegt.</span></p>
+<p><span style="font-size: 18px">In Vorlesung 12 werden wir noch feststellen, dass wir (leider) <u>nicht</u> schlussfolgern können, dass der wahre Populationsmittelwert <span class="math inline">\(\mu\)</span> mit 68% Wahrscheinlichkeit in diesem Intervall liegt.</span></p>
 </div><div class="column" style="width:35%;">
 <p><img data-src="images/sem_example.png" height="280"></p>
 </div>
