--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -344,10 +344,11 @@
 
   <p class="author">Prof.&nbsp;Matthias Guggenmos</p>
   <p class="institute">Health and Medical University Potsdam</p>
-  <p class="date">10.10.2023</p>
+<!--   <p class="date">10.10.2023</p>
+ -->
 <div style="display: flex; justify-content: space-between; align-items: baseline">
 <div><img src="images/logo_black.png" height="200px"></div>
-<div><img src="images/paradoxia_group_of_scientists.png" height="240px"></div>
+<div><button onclick="new Audio('images/appear.mp3').play()" class="intro-sound"><img src="images/paradoxia_group_of_scientists.png" height="240px"></button></div>
 </div>
 </section>
 <section>
@@ -503,7 +504,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <tr class="even">
 <td><strong>Onlineversion</strong></td>
 <td><img data-src="images/m-guggenmos_github.png"></td>
-<td>Format: html</td>
+<td>Format: html &amp; pdf</td>
 <td><a href="https://m-guggenmos.github.io">m-guggenmos.github.io</a> oder <a href="https://cutt.ly/risch">cutt.ly/risch</a></td>
 </tr>
 </tbody>
@@ -513,45 +514,43 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <h2>Klausur</h2>
 <ul>
 <li class="fragment">In der vorlesungsfreien Zeit nach Semesterende findet eine <strong>schriftliche Klausur</strong> zu Statistik 1 statt.</li>
-<li class="fragment"><strong>Klausurrelevant</strong> sind dabei alle Inhalte der Vorlesungsfolien, falls nicht extra gekennzeichnet.</li>
-<li class="fragment"><strong>Klausurrelevant</strong> sind auch die Übungen, die Sie im Seminar durchführen.</li>
+<li class="fragment"><strong>Klausurrelevant</strong> sind dabei alle <strong>Inhalte der Vorlesungsfolien</strong>, falls nicht extra gekennzeichnet.</li>
+<li class="fragment"><strong>Klausurrelevant</strong> sind auch die <strong>Übungen</strong>, die Sie im <strong>Seminar</strong> durchführen.</li>
 </ul>
-</section>
+
+<img data-src="images/klausur2.png" width="450" class="r-stretch"></section>
 <section class="slide level2">
 <h2>Literatur</h2>
-<div class="columns">
-<div class="column" style="width:50%;">
-<p><img data-src="images/eid_gollwitzer_schmitt.jpg" height="320"></p>
-<div style="font-size: 22px">
-<p><em>Michael Eid, Mario Gollwitzer &amp; Manfred Schmitt. Statistik und Forschungsmethoden. Beltz, 5. Auflage (2017).</em></p>
-<p><strong>Vorteile:</strong></p>
-<ul>
-<li class="fragment">Umfasst alles (und mehr), was Sie für Statistik 1 und 2 wissen müssen</li>
-<li class="fragment">Sehr zuverlässige Referenz</li>
-<li class="fragment">Übungen</li>
-</ul>
-<p><strong>Nachteile:</strong></p>
-<ul>
-<li class="fragment">Recht trockener, mathematischer Stil</li>
-</ul>
-</div>
-</div><div class="column" style="width:50%;">
-<p><img data-src="images/cover_larson_farber.jpg" height="320"></p>
-<div style="font-size: 22px">
-<p><em>Ron Larson &amp; Betsy Farber. Elementary Statistics: Picturing the World. Pearson, 7. Auflage (2019).</em></p>
-<p><strong>Vorteile:</strong></p>
-<ul>
-<li class="fragment">Unterhaltsamer intuitiver Stil</li>
-<li class="fragment">Kurz &amp; bündig</li>
-<li class="fragment">Viele Übungen <!-- - Enge Verknüpfung mit der Statistik-Programmiersprache R &mdash; sehr hilfreich für Ihre Bachelor- oder Masterarbeit. --></li>
-</ul>
-<p><strong>Nachteile:</strong></p>
-<ul>
-<li class="fragment">Weniger geeignet als Nachschlagewerk</li>
-</ul>
-</div>
-</div>
-</div>
+<!---  Table --->
+<table>
+<colgroup>
+<col style="width: 15%">
+<col style="width: 40%">
+<col style="width: 45%">
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><img data-src="images/cover_bortz.jpg" height="140"></td>
+<td><em>Jürgen Bortz &amp; Christof Schuster. Statistik für Human- und Sozialwissenschaftler. Springer, 7. Auflage (2010).</em></td>
+<td>Standardwerk. Umfassend, gute Erklärungen, viele Übungen.</td>
+</tr>
+<tr class="even">
+<td><img data-src="images/cover_schaefer.png" height="140"></td>
+<td><em>Thomas Schäfer. Methodenlehre und Statistik. Springer, 1. Auflage (2016).</em></td>
+<td>Nah an der Vorlesung, Inhalte auf das Wesentliche heruntergebrochen.</td>
+</tr>
+<tr class="odd">
+<td><img data-src="images/eid_gollwitzer_schmitt.jpg" height="140"></td>
+<td><em>Michael Eid, Mario Gollwitzer &amp; Manfred Schmitt. Statistik und Forschungsmethoden. Beltz, 5. Auflage (2017).</em></td>
+<td>Umfassend, vergleichsweise mathematisch, eher für Fortgeschrittene und weitergehend Interessierte. Enthält nützliche Übungen.</td>
+</tr>
+<tr class="even">
+<td><img data-src="images/cover_larson_farber.jpg" height="140"></td>
+<td><em>Ron Larson &amp; Betsy Farber. Elementary Statistics: Picturing the World. Pearson, 7. Auflage (2019).</em></td>
+<td>Unterhaltsamer intuitiver Stil, kurz &amp; bündig, viele Übungen, auf Englisch!</td>
+</tr>
+</tbody>
+</table>
 </section></section>
 <section>
 <section class="title-slide slide level1 center">
@@ -675,9 +674,10 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </section>
 <section class="slide level2">
 <h2></h2>
-<p>Placeholder image!!!</p>
+<!-- Placeholder image!!! -->
 
-<img data-src="images/menti_corona.png" class="r-stretch"></section>
+<img data-src="images/menti_corona.png" class="r-stretch"><p><a href="https://www.mentimeter.com/">https://www.mentimeter.com/</a></p>
+</section>
 <section class="slide level2">
 <h2>Beispiel Prävalenzfehler</h2>
 <div class="columns">
@@ -1026,7 +1026,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 'menu': {"side":"left","useTextContentForMissingTitles":true,"markers":false,"loadIcons":false,"custom":[{"title":"Tools","icon":"<i class=\"fas fa-gear\"></i>","content":"<ul class=\"slide-menu-items\">\n<li class=\"slide-tool-item active\" data-item=\"0\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.fullscreen(event)\"><kbd>f</kbd> Fullscreen</a></li>\n<li class=\"slide-tool-item\" data-item=\"1\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.speakerMode(event)\"><kbd>s</kbd> Speaker View</a></li>\n<li class=\"slide-tool-item\" data-item=\"2\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.overview(event)\"><kbd>o</kbd> Slide Overview</a></li>\n<li class=\"slide-tool-item\" data-item=\"3\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.togglePdfExport(event)\"><kbd>e</kbd> PDF Export Mode</a></li>\n<li class=\"slide-tool-item\" data-item=\"4\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.toggleChalkboard(event)\"><kbd>b</kbd> Toggle Chalkboard</a></li>\n<li class=\"slide-tool-item\" data-item=\"5\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.toggleNotesCanvas(event)\"><kbd>c</kbd> Toggle Notes Canvas</a></li>\n<li class=\"slide-tool-item\" data-item=\"6\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.downloadDrawings(event)\"><kbd>d</kbd> Download Drawings</a></li>\n<li class=\"slide-tool-item\" data-item=\"7\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.keyboardHelp(event)\"><kbd>?</kbd> Keyboard Help</a></li>\n</ul>"}],"openButton":true},
 'chalkboard': {"buttons":false},
 'animate': {"autoplay":true},
-'customcontrols': {"controls":[{"id":"home","title":"Startseite","icon":"<i class=\"fa-solid fa-house\" style=\"color:#8398dd\"></i>","action":"window.open(`${location.protocol}//${location.host}`, '_blank');"},{"id":"print-pdf","title":"Als PDF","icon":"<i class=\"fa-solid fa-file-pdf\" style=\"color:#8398dd\"></i>","action":"window.open(`${location.protocol}//${location.host}${location.pathname}`.replace('index.html', `Vorlesung${location.pathname.split('/')[1]}.pdf`), '_blank');"},{"id":"print","title":"Drucken","icon":"<i class=\"fa-solid fa-print\" style=\"color:#8398dd\"></i>","action":"location.href = location.href.includes('print-pdf') ? `${location.protocol}//${location.host}${location.pathname}${location.hash}` : `${location.protocol}//${location.host}${location.pathname}?print-pdf${location.hash}`;"},{"id":"toggle-notes","title":"Notizen (c)","icon":"<i class=\"fa-solid fa-pen\" style=\"color:#8398dd\"></i>","action":"RevealMenuToolHandlers.toggleNotesCanvas(event);if (!window.hasOwnProperty('status_notes')) {window.status_notes= true;} else {window.status_notes = !window.status_notes}; document.querySelector('.fa-pen').style.color = window.status_notes ?  '#dfe169' : '#8398dd';"},{"id":"toggle-chalkboard","title":"Tafel (b)","icon":"<i class=\"fa-solid fa-person-chalkboard\" style=\"color:#8398dd\"></i>","action":"RevealMenuToolHandlers.toggleChalkboard(event);if (!window.hasOwnProperty('status_chalkboard')) {window.status_chalkboard = true;} else {window.status_chalkboard = !window.status_chalkboard}; document.querySelector('.fa-person-chalkboard').style.color = window.status_chalkboard ?  '#dfe169' : '#8398dd';"},{"id":"toggle-fragments","title":"Animationen","icon":"<i class=\"fa-solid fa-bolt\" style=\"color:#8398dd\"></i>","action":"debugger; Reveal.getConfig().fragments = !Reveal.getConfig().fragments; document.querySelector('.fa-bolt').style.color = Reveal.getConfig().fragments ?  '#dfe169' : '#8398dd'; if (Reveal.getConfig().fragments) {elements = Reveal.getCurrentSlide().querySelectorAll('[data-animate]');for (var i = 0; i < elements.length; i++ ){if (elements[i].innerHTML.includes('was_anim')) {elements[i].innerHTML = elements[i].innerHTML_prev;}}} else {elements = Reveal.getCurrentSlide().querySelectorAll('[data-animate]'); for (var i = 0; i < elements.length; i++ ){if (elements[i].innerHTML.includes('class: fragment')) {elements[i].innerHTML = `<div><img src='${elements[i].getAttribute('data-src')}' class='was_anim'></div>`;}}fragments = document.querySelectorAll('.fragment');for (let i = 0; i < fragments.length; i++) {fragments[i].classList.add('visible');}}"}]},
+'customcontrols': {"controls":[{"id":"home","title":"Startseite","icon":"<i class=\"fa-solid fa-house\" style=\"color:#8398dd\"></i>","action":"window.open(`${location.protocol}//${location.host}`, '_blank');"},{"id":"print-pdf","title":"Als PDF","icon":"<i class=\"fa-solid fa-file-pdf\" style=\"color:#8398dd\"></i>","action":"window.open(`${location.protocol}//${location.host}${location.pathname}`.replace('index.html', `Vorlesung${location.pathname.split('/')[1]}.pdf`), '_blank');"},{"id":"print","title":"Drucken","icon":"<i class=\"fa-solid fa-print\" style=\"color:#8398dd\"></i>","action":"location.href = location.href.includes('print-pdf') ? `${location.protocol}//${location.host}${location.pathname}${location.hash}` : `${location.protocol}//${location.host}${location.pathname}?print-pdf${location.hash}`;"},{"id":"toggle-notes","title":"Notizen (c)","icon":"<i class=\"fa-solid fa-pen\" style=\"color:#8398dd\"></i>","action":"RevealMenuToolHandlers.toggleNotesCanvas(event);"},{"id":"toggle-chalkboard","title":"Tafel (b)","icon":"<i class=\"fa-solid fa-person-chalkboard\" style=\"color:#8398dd\"></i>","action":"RevealMenuToolHandlers.toggleChalkboard(event);"},{"id":"toggle-fragments","title":"Animationen","icon":"<i class=\"fa-solid fa-bolt\" style=\"color:#8398dd\"></i>","action":"debugger; Reveal.getConfig().fragments = !Reveal.getConfig().fragments; document.querySelector('.fa-bolt').style.color = Reveal.getConfig().fragments ?  '#dfe169' : '#8398dd'; if (Reveal.getConfig().fragments) {elements = Reveal.getCurrentSlide().querySelectorAll('[data-animate]');for (var i = 0; i < elements.length; i++ ){if (elements[i].innerHTML.includes('was_anim')) {elements[i].innerHTML = elements[i].innerHTML_prev;}}} else {elements = Reveal.getCurrentSlide().querySelectorAll('[data-animate]'); for (var i = 0; i < elements.length; i++ ){if (elements[i].innerHTML.includes('class: fragment')) {elements[i].innerHTML = `<div><img src='${elements[i].getAttribute('data-src')}' class='was_anim'></div>`;}}fragments = document.querySelectorAll('.fragment');for (let i = 0; i < fragments.length; i++) {fragments[i].classList.add('visible');}}"},{"id":"intro-sound","title":"Play intro","icon":"<i class=\"fa-solid fa-music\" style=\"color:#8398dd\"></i>","action":"new Audio('images/appear.mp3').play()"}]},
 'smaller': false,
  
         // Display controls in the bottom right corner
