--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -371,7 +371,7 @@
 <h2>Weiteres Mysterium: blaue Haare</h2>
 <div class="columns">
 <div class="column" style="width:70%;">
-<p>Noch ist wenig bekannt über die Erkrankung. Eine weitere Auffälligkeit ist, dass viele der Betroffenen, eine Neigung haben, ihre Haare blau zu färben. Warum das so ist, ist unklar, auch wenn gemutmaßt wird, dass hierfür ein viral gegangenes Tik-Tok-Video einer Betroffenen verantwortlich ist.</p>
+<p>Noch ist wenig bekannt über die Erkrankung. Eine weitere Auffälligkeit ist, dass viele der Betroffenen eine Neigung haben, ihre Haare blau zu färben. Warum das so ist, ist unklar, auch wenn gemutmaßt wird, dass hierfür ein viral gegangenes Tik-Tok-Video einer Betroffenen verantwortlich ist.</p>
 </div><div class="column" style="width:30%;">
 <p><img data-src="images/paradoxia_people_with_blue_hair.png"> <!-- Source: Midjourney --></p>
 </div>
@@ -591,7 +591,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <p><span style=" color: navy !important;"><strong>Statistik</strong></span> ist ein angewandter Zweig der Mathematik, der sich mit der <strong>Erhebung</strong>, <strong>Analyse</strong> und <strong>Interpretation</strong> empirischer Daten befasst.</p>
 <hr>
 </div>
-<div class="indent">
+<div class="indent fragment">
 <p><br></p>
 <table style="width:95%;">
 <caption>Beispiele</caption>
@@ -617,13 +617,11 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </div>
 </div><div class="column" style="width:27%;">
 <p><img data-src="images/roman_empire.png"></p>
-<div class="fragment">
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="images/stats101.png"></p>
 <figcaption>Bildnachweis<a href="#/footnotes" class="footnote-ref" id="fnref3" role="doc-noteref" data-footnote-href="#/fn3" onclick=""><sup>3</sup></a> <a href="#/footnotes" class="footnote-ref" id="fnref4" role="doc-noteref" data-footnote-href="#/fn4" onclick=""><sup>4</sup></a></figcaption>
 </figure>
-</div>
 </div>
 </div>
 </div>
@@ -637,7 +635,9 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 
 </div>
 <div class="smaller">
+<div class="fragment">
 <p><span class="block-heading">Probleme intuitiver Empirie (kleiner Ausschnitt)</span></p>
+</div>
 <ul>
 <li class="fragment">Kognitive Biases (z.b. Konfirmationsbias)</li>
 <li class="fragment">Schwächen beim probabilistischen Denken (Stichwort <em>Lotto</em>)</li>
@@ -664,7 +664,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <div class="column" style="width:70%;">
 <p>Ein neuentwickelter Coronatest wird damit beworben, dass er anhand einer Speichelprobe in 100% der Fälle eine bestehende Coronaerkrankung erkennt. Im Kleingedruckten findet sich der Hinweis, dass die Spezifität 90% beträgt, d.h. der Test weist in 10% der Fälle eine <em>gesunde Person fälschlicherweise als krank</em> aus.</p>
 <p>Nehmen Sie an, die Prävalenz von Corona ist 1%, d.h. eine von hundert Personen ist mit Corona infiziert.</p>
-<div class="greybox">
+<div class="greybox fragment">
 <p><strong>Schätzen Sie:</strong> Angenommen Ihr Test ist positiv, in wie viel Prozent der Fälle sind Sie dann auch tatsächlich positiv?</p>
 </div>
 </div><div class="column" style="width:30%;">
@@ -745,7 +745,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <h2>Beispiel Meditonsin</h2>
 <div class="columns">
 <div class="column" style="width:68%;">
-<p>Eine Erklärung ist mangelndes Bewusstsein für einen Effekt der auch als <strong>Regression zur Mitte</strong> bezeichnet wird.</p>
+<p>Eine Erklärung ist mangelndes Bewusstsein für einen Effekt, der auch als <strong>Regression zur Mitte</strong> bezeichnet wird.</p>
 <ul>
 <li class="fragment">Meditonsin wird vermutlich häufig eingenommen, wenn eine Erkältung auf ihrem Höhepunkt ist.</li>
 <li class="fragment"><em>In aller Regel verbessert</em> sich der Gesundheitszustand nach Erkältungen auch ohne Medikation und pendelt sich wieder auf einen Normalzustand ein (dies ist die “Regression” zur “Mitte”).</li>
@@ -832,7 +832,9 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <div class="vspace-medium">
 
 </div>
+<div class="fragment">
 <p><span class="block-heading">Beispiele</span></p>
+</div>
 <ul>
 <li class="fragment">Es gibt einen positiven Zusammenhang zwischen der Feinstaubbelastung einer Stadt und der Prävalenz von Lungenerkrankungen.</li>
 <li class="fragment">Eine vorherige Impfung mit dem Corona-Impfstoff verringert die Symptomschwere im Fall einer Infektion.</li>
@@ -853,13 +855,17 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <div class="vspace-medium">
 
 </div>
+<div class="fragment">
 <p><span class="block-heading">Beispiele</span></p>
+</div>
 <ul>
 <li class="fragment">Alle Lebewesen benötigen Sauerstoff, aber manche Lebenwesen sind anaerob [<del>widerspruchsfrei</del>, <del>widerlegbar</del>, operationalisierbar]</li>
 <li class="fragment">Könnten Babies sprechen, würden sie hauptsächlich ihre Gefühle zum Ausdruck bringen [widerspruchsfrei, operationalsierbar, <del>widerlegbar</del>]</li>
-<li class="fragment">Bewusstsein ist eine notwendige Voraussetzung um zu fühlen [widerspruchsfrei, <del>operationalisierbar</del>, <del>widerlegbar</del>].</li>
+<li class="fragment">Gott ist eine notwendige Voraussetzung für Leben [widerspruchsfrei, <del>operationalisierbar</del>, <del>widerlegbar</del>].</li>
 </ul>
-<p>Beachte: Hypothese, die nicht widerspruchsfrei oder nicht operationalisierbar sind, sind auch nicht widerlegbar (die umgekehrte Aussage gilt nicht in allen Fällen).</p>
+<div class="fragment">
+<p><strong>Beachte:</strong> Hypothese, die nicht widerspruchsfrei oder nicht operationalisierbar sind, sind auch nicht widerlegbar (die umgekehrte Aussage gilt nicht in allen Fällen).</p>
+</div>
 
 <aside><div>
 <p><strong>Operationalisierung:</strong> Messbarmachung eines theoretischen Konstrukts (Schwerkraft, Intelligenz, psychische Resilienz, …) durch ein geeignetes Messinstrument (Gravimeter, Intelligenztest, Fragebogen, …)</p>
@@ -875,11 +881,11 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <tbody>
 <tr class="odd">
 <td><strong>Prädiktivität</strong></td>
-<td><em>Hypothesen sollten präzise Vorhersagen ermöglichen</em><br><u>Negativbeispiel:</u> Das Selbst ist in ein Es, Ich, Über-Ich aufgeteilt<br><u>Positivbeispiel:</u> Eine tägliche morgendliche Meditationsübung verringert das subjektive und objektive Stresslevel</td>
+<td><em>Hypothesen sollten präzise Vorhersagen ermöglichen</em><br><u>Negativbeispiel:</u> Das Selbst ist in ein Es, Ich, Über-Ich aufgeteilt.<br><u>Positivbeispiel:</u> Eine tägliche morgendliche Meditationsübung verringert das subjektive und objektive Stresslevel.</td>
 </tr>
 <tr class="even">
 <td><strong>Spezifität</strong></td>
-<td><em>Hypothesen sollten spezifisch und konkret sein</em><br><u>Negativbeispiel:</u> Frühe Kindheitstraumata wirken sich nachteilig auf spätere Beziehungen aus<br><u>Positivbeispiel:</u> Kindheitstraumata in einem vorsprachlichen Alter, verursacht durch wichtige Bezugspersonen, erhöhen die Wahrscheinlichkeit von Bindungsangst in engen romantischen Beziehungen</td>
+<td><em>Hypothesen sollten spezifisch und konkret sein</em><br><u>Negativbeispiel:</u> Frühe Kindheitstraumata wirken sich nachteilig auf spätere Beziehungen aus.<br><u>Positivbeispiel:</u> Kindheitstraumata in einem vorsprachlichen Alter, verursacht durch wichtige Bezugspersonen, erhöhen die Wahrscheinlichkeit von Bindungsangst in engen romantischen Beziehungen.</td>
 </tr>
 <tr class="odd">
 <td><strong>Sparsamkeit</strong></td>
@@ -887,7 +893,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </tr>
 <tr class="even">
 <td><strong>Relevanz</strong></td>
-<td><em>Hypothesen sollten von theoretischer oder gesellschaftlicher Relevanz sein</em><br><u>Negativbeispiel:</u> Menschen mit roten Autos bevorzugen rote Gemüsesorten<br><u>Positivbeispiel:</u> Nach persönlichen Erfolgserlebnissen neigen Menschen zu riskantem Fahrverhalten</td>
+<td><em>Hypothesen sollten von theoretischer oder gesellschaftlicher Relevanz sein</em><br><u>Negativbeispiel:</u> Menschen mit roten Autos bevorzugen rote Gemüsesorten.<br><u>Positivbeispiel:</u> Nach persönlichen Erfolgserlebnissen neigen Menschen zu riskantem Fahrverhalten.</td>
 </tr>
 </tbody>
 </table>
@@ -924,13 +930,17 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <h2>Probabilistische Hypothesen</h2>
 <div class="columns">
 <div class="column" style="width:75%;">
-<p>In der Psychologie sind Hypothesen in aller Regel <strong>probabilistisch</strong>, d.h. sie machen Aussagen über Wahrscheinlichkeiten und Mittelwerte.</p>
+<p>In der Psychologie sind Hypothesen in aller Regel nicht <strong>deterministisch</strong>, sondern <strong>probabilistisch</strong>, d.h. sie machen Aussagen über Wahrscheinlichkeiten und Mittelwerte.</p>
 <div class="vspace-smaller">
 
 </div>
 <div class="smaller">
+<div class="fragment">
 <p><strong>Beispiel deterministische Hypothese:</strong> Menschen mit Alkoholabhängigkeit entwickeln eine Depression.</p>
+</div>
+<div class="fragment">
 <p><strong>Beispiel probabilistische Hypothese:</strong> Menschen mit Alkoholabhängigkeit haben <em>im Mittel</em> eine höhere Ausprägung depressiver Symptome.</p>
+</div>
 </div>
 <div class="vspace-smaller">
 
@@ -960,7 +970,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <p><strong>Hypothese 1:</strong> Die Blaufärbung der Haare ist ein reines Tik-Tok-Phänomen. <em>Betroffene sollten daher mehr Zeit auf der Social-Media-Plattform TikTok verbringen als Nicht-Betroffene.</em></p>
 </div>
 <div class="fragment">
-<p><strong>Hypothese 2:</strong> Paradoxia wird durch eine virale Infektion verursacht. <em>Die Blutproben von Betroffenen sollten daher eine höhere Konzentration von Entzündungsmarkern aufweisen als Nicht-Betroffene.</em></p>
+<p><strong>Hypothese 2:</strong> Paradoxia wird durch eine virale Infektion verursacht. <em>Die Blutproben von Betroffenen sollten daher eine höhere Konzentration von Entzündungsmarkern aufweisen als von Nicht-Betroffenen.</em></p>
 </div>
 <p><img src="images/hmu_logo.png" class="slide-logo"></p>
 <div class="footer footer-default">
